<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:digits="0123456789"
        android:inputType="number"
        app:key="CorrectValue"
        app:title="@string/correct_value"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/reset_data">
        <Preference
            app:key="resetSuccessesPreference"
            app:title="@string/reset_success_count" />

        <Preference
            app:key="resetOhNosPreference"
            app:title="@string/reset_oh_no_count" />

        <Preference
            app:key="resetClearsPreference"
            app:title="@string/reset_clear_count" />

        <Preference
            app:key="resetAllCountsPreference"
            app:title="@string/reset_all_counts" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about">
        <Preference app:summary="@string/about_the_app" />
    </PreferenceCategory>

</PreferenceScreen>
